--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </section>
     </nav>
     <br>
-    <section class="container-fluid border border-light rounded bg-white mb-3 mt-2 w-50 p-3">
+    <main class="container-fluid border border-light rounded bg-white mb-3 mt-2 w-50 p-3">
         <section class="container">
             <section class="row w-30 p-3">
                 <section class="col-sm-12 col-md-12 col-lg-12 mb-3">
@@ -65,14 +65,15 @@
                         Pennsylvania. I have experience as a freelance Content Marketer along with being a eCommerce
                         Content Specialist at Dick's Sporting Goods.</p>
 
-                    <p class="text-center">From design to execution, I utilize creativity and technical skills to provide
+                    <p class="text-center">From design to execution, I utilize creativity and technical skills to
+                        provide
                         seamless end to end projects and results through JavaScript, Reactjs, React Native, jQuery,
                         Bootstrap, and other libraries and frameworks. Check out my <a
                             href="portfolio.html">portfolio</a> for a better look at my way of thinking.</p>
                 </section>
             </section>
         </section>
-    </section>
+    </main>
     </br>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
@@ -83,26 +84,31 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
         integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
         crossorigin="anonymous"></script>
-        <body class="d-flex flex-column">
-            <div id="page-content">
-              <div class="container text-center">
+
+    <body class="d-flex flex-column">
+        <div id="page-content">
+            <div class="container text-center">
                 <div class="row justify-content-center">
-                  <div class="col-md-7">
-                    <h1 class="font-weight-light mt-4 text-dark"></h1>
-                  </div>
+                    <div class="col-md-7">
+                        <h1 class="font-weight-light mt-4 text-dark"></h1>
+                    </div>
                 </div>
-              </div>
             </div>
-            <footer id="sticky-footer" class="py-4 bg-light text-dark-50">
-              <div class="container text-center">
+        </div>
+        <footer id="sticky-footer" class="py-4 bg-light text-dark-50">
+            <div class="container text-center">
                 <small>Copyright &copy;</small>
-              </div>
-            </footer>
-</body>
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-  integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-  integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
-  integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+            </div>
+        </footer>
+    </body>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+        integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+        crossorigin="anonymous"></script>
+
 </html>
