--- a/portfolio.html
+++ b/portfolio.html
@@ -33,7 +33,7 @@
     </section>
   </nav>
   <br>
-  <section class="container-fluid border border-light rounded bg-white mb-3 mt-2 w-50 p-auto">
+  <main class="container-fluid border border-light rounded bg-white mb-3 mt-2 w-50 p-auto">
     <h1 class="display-4 border-bottom">Portfolio</h1>
     <section class="form-row w-30 p-3">
       <section class="col-sm-12 col-md-12 col-lg-12 mb-3">
@@ -65,7 +65,7 @@
           </section>
         </section>
       </section>
-    </section>
+    </main>
     </br>
     <body class="d-flex flex-column">
       <div id="page-content">
@@ -82,21 +82,6 @@
           <small>Copyright &copy;</small>
         </div>
       </footer>
-      <body class="d-flex flex-column">
-        <div id="page-content">
-          <div class="container text-center">
-            <div class="row justify-content-center">
-              <div class="col-md-7">
-                <h1 class="font-weight-light mt-4 text-dark"></h1>
-              </div>
-            </div>
-          </div>
-        </div>
-        <footer id="sticky-footer" class="py-4 bg-light text-dark-50">
-          <div class="container text-center">
-            <small>Copyright &copy;</small>
-          </div>
-        </footer>
 </body>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
   integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
