--- a/contact.html
+++ b/contact.html
@@ -15,19 +15,22 @@
             aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="index.html">
             <h2 class="display-5">Kristy Keller</h2>
         </a>
         <section class="collapse navbar-collapse" id="navbarTogglerDemo03">
             <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                <li class="nav-item">
                 <li class="nav-item">
                     <a class="nav-link" href="index.html">About</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="portfolio.html">Portfolio</a>
                 </li>
-                <a class="nav-link" href="contact.html">Contact</a>
+                <li class="nav-item">
+                    <a class="nav-link" href="file:///C:/Users/Kelle/Code/Homework/Responsiveness-Portfolio/KristyKeller.github.io/assets/Images/Kristy%20E.%20Keller%20R%C3%A9sum%C3%A9.pdf">Resume</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="contact.html">Contact</a>
                 </li>
             </ul>
         </section>
@@ -107,7 +110,7 @@
         </div>
         <footer id="sticky-footer" class="py-4 bg-light text-dark-50">
             <div class="container text-center">
-                <small>Copyright &copy;</small>
+                <small>Copyright &copy;Kristy Keller</small>
             </div>
         </footer>
     </body>
