--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="index.html">
             <h2 class="display-5">Kristy Keller</h2>
         </a>
         <section class="collapse navbar-collapse" id="navbarTogglerDemo03">
@@ -29,6 +29,9 @@
                     <a class="nav-link" href="portfolio.html">Portfolio</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="file:///C:/Users/Kelle/Code/Homework/Responsiveness-Portfolio/KristyKeller.github.io/assets/Images/Kristy%20E.%20Keller%20R%C3%A9sum%C3%A9.pdf">Resume</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="contact.html">Contact</a>
                 </li>
             </ul>
@@ -37,35 +40,35 @@
     <br>
     <main class="container-fluid border border-light rounded bg-white mb-3 mt-2 w-50 p-3">
         <section class="container">
-            <section class="row w-30 p-3">
+            <section class="row w-30 p-2">
                 <section class="col-sm-12 col-md-12 col-lg-12 mb-3">
-                    <h1 class="display-4 border-bottom">About Me</h1>
+                    <h1 class="display-5 border-bottom text-center">About Me</h1>
                     <img src="./assets/Images/bio-photo.jpg"
                         class="rounded-circle float-left border border-light-left-0" alt="Kristy Keller"
-                        style="width:160px;height:180px;">
-                    <section class="text-dark text-center">
+                        style="width:120px;height:150px;">
+                    <section class="text-dark">
                         <h4>Kristy Keller</h4>
                     </section>
 
-                    <p class="text-center text-dark"><i class="fas fa-map-marker-alt"></i>
+                    <p class="text-dark"><i class="fas fa-map-marker-alt"></i>
                         </svg> Philadelphia, PA</p>
-                    <p class="text-center text-dark"><i class="fab fa-github"> </i><a
-                            href="https://github.com/KristyKeller"> GitHub</a> <i class="fab fa-linkedin"></i><a
-                            href="https://www.linkedin.com/in/kellerkristy/"> Linkedin</a> <i
+                    <p class="text-dark"><i class="fab fa-github"> </i><a href="https://github.com/KristyKeller">
+                            GitHub</a><br><i class="fab fa-linkedin"></i><a
+                            href="https://www.linkedin.com/in/kellerkristy/"> Linkedin</a><br><i
                             class="fas fa-envelope"></i></i><a href="mailto:keller.kristy@outlook.com"> Email</a></p>
 
-                    <p class="text-center">Detail-oriented Full-Stack Web Developer with a passion for ceaseless
+                    <p>Detail-oriented Full-Stack Web Developer with a passion for ceaseless
                         learning and building dynamic web and mobile applications. I have been in the eCommerce industry
                         for nearly three years and adore the problem solving environment the technology field fosters,
                         leading me to pursue a path further involved with back-end and front-end development.</p>
 
-                    <p class="text-center">I graduated with dual Master's degrees in Business Administration and Media
+                    <p>I graduated with dual Master's degrees in Business Administration and Media
                         Communication from Point Park University along with a Bachelor's degree in Communication from
                         Keystone College. I have a Full Stack Web Development certificate from the University of
                         Pennsylvania. I have experience as a freelance Content Marketer along with being a eCommerce
                         Content Specialist at Dick's Sporting Goods.</p>
 
-                    <p class="text-center">From design to execution, I utilize creativity and technical skills to
+                    <p>From design to execution, I utilize creativity and technical skills to
                         provide
                         seamless end to end projects and results through JavaScript, Reactjs, React Native, jQuery,
                         Bootstrap, and other libraries and frameworks. Check out my <a
@@ -97,7 +100,7 @@
         </div>
         <footer id="sticky-footer" class="py-4 bg-light text-dark-50">
             <div class="container text-center">
-                <small>Copyright &copy;</small>
+                <small>Copyright &copy;Kristy Keller</small>
             </div>
         </footer>
     </body>
