--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
       aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <a class="navbar-brand" href="#">
+    <a class="navbar-brand" href="index.html">
       <h2 class="display-5">Kristy Keller</h2>
     </a>
     <section class="collapse navbar-collapse" id="navbarTogglerDemo03">
@@ -25,6 +25,9 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" href="portfolio.html">Portfolio</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="file:///C:/Users/Kelle/Code/Homework/Responsiveness-Portfolio/KristyKeller.github.io/assets/Images/Kristy%20E.%20Keller%20R%C3%A9sum%C3%A9.pdf">Resume</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="contact.html">Contact</a>
@@ -40,17 +43,26 @@
         <section class="row row-cols-1 row-cols-md-2">
           <section class="col mb-4">
             <section class="card h-100">
-              <img src="./assets/Images/placeholder.jpg" class="card-img-top" alt="Project One">
+              <a href="https://github.com/KristyKeller/BetterMe">
+                <img src="./assets/Images/home-page.png" class="card-img-top" alt="Project One">
+            </section>
+            </a>
+          </section>
+          <section class="col mb-4">
+            <section class="card h-100">
+              <a href="https://github.com/KristyKeller/day-planner">
+                <img src="./assets/Images/day-planner.png" class="card-img-top" alt="Project Two"> </a>
             </section>
           </section>
           <section class="col mb-4">
             <section class="card h-100">
-              <img src="./assets/Images/placeholder.jpg" class="card-img-top" alt="Project Two">
+              <a href="https://github.com/KristyKeller/password-generator">
+                <img src="./assets/Images/password-generator.png" class="card-img-top" alt="Project Three"> </a>
             </section>
           </section>
           <section class="col mb-4">
             <section class="card h-100">
-              <img src="./assets/Images/placeholder.jpg" class="card-img-top" alt="Project Three">
+              <img src="./assets/Images/placeholder.jpg" class="card-img-top" alt="Project Four">
             </section>
           </section>
           <section class="col mb-4">
@@ -80,7 +92,7 @@
     </div>
     <footer id="sticky-footer" class="py-4 bg-light text-dark-50">
       <div class="container text-center">
-        <small>Copyright &copy;</small>
+        <small>Copyright &copy;Kristy Keller</small>
       </div>
     </footer>
   </body>
